--- a/actix-service/Cargo.toml
+++ b/actix-service/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+futures = "0.3.24"
+async-std = { version = "1", features = ["attributes", "tokio1"] }
+reqwest = "0.11.11"
+anyhow = "1.0"
+thiserror = "1.0"
+itertools = "0.10.3"
