hyper: block request and send empty response

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ path = "actix-service/src/main.rs"
 
 [[bin]]
 name = "hyper-service"
-path = "hyper-service/src/main.rs"
+path = "hyper-service/src/bin/main.rs"
 
 
 [[bin]]
