--- a/hyper-service/Cargo.toml
+++ b/hyper-service/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
+http = "0.2"
